--- a/server/src/Jaroszek.PoC.SignalRChat.Application/Jaroszek.PoC.SignalRChat.Application.csproj
+++ b/server/src/Jaroszek.PoC.SignalRChat.Application/Jaroszek.PoC.SignalRChat.Application.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Jaroszek.PoC.SignalRChat.Domain\Jaroszek.PoC.SignalRChat.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
