--- a/server/src/Jaroszek.PoC.SignalRChat.Application/Jaroszek.PoC.SignalRChat.Application.csproj
+++ b/server/src/Jaroszek.PoC.SignalRChat.Application/Jaroszek.PoC.SignalRChat.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\Jaroszek.PoC.SignalRChat.Domain\Jaroszek.PoC.SignalRChat.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
