--- a/server/src/Jaroszek.PoC.SignalRChat.Infrastructure/Jaroszek.PoC.SignalRChat.Infrastructure.csproj
+++ b/server/src/Jaroszek.PoC.SignalRChat.Infrastructure/Jaroszek.PoC.SignalRChat.Infrastructure.csproj
@@ -4,6 +4,15 @@
     <ProjectReference Include="..\Jaroszek.PoC.SignalRChat.Application\Jaroszek.PoC.SignalRChat.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
