--- a/server/tests/Jaroszek.PoC.SignalRChat.AutomatedUiTests/Jaroszek.PoC.SignalRChat.AutomatedUiTests.csproj
+++ b/server/tests/Jaroszek.PoC.SignalRChat.AutomatedUiTests/Jaroszek.PoC.SignalRChat.AutomatedUiTests.csproj
@@ -7,10 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.Edge.SeleniumTools" Version="3.141.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="SpecFlow.MsTest" Version="3.7.38" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.Application\Jaroszek.PoC.SignalRChat.Application.csproj" />
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.WebUI\Jaroszek.PoC.SignalRChat.WebUI.csproj" />
   </ItemGroup>
 
 </Project>
