--- a/server/tests/Jaroszek.PoC.SignalRChat.IntegrationTests/Jaroszek.PoC.SignalRChat.IntegrationTests.csproj
+++ b/server/tests/Jaroszek.PoC.SignalRChat.IntegrationTests/Jaroszek.PoC.SignalRChat.IntegrationTests.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="5.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
-    <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.WebUI\Jaroszek.PoC.SignalRChat.WebUI.csproj" />
   </ItemGroup>
 
 </Project>
