--- a/server/tests/Jaroszek.PoC.SignalRChat.UnitTests/Jaroszek.PoC.SignalRChat.UnitTests.csproj
+++ b/server/tests/Jaroszek.PoC.SignalRChat.UnitTests/Jaroszek.PoC.SignalRChat.UnitTests.csproj
@@ -7,10 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MemoryCache.Testing.Moq" Version="1.2.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.Application\Jaroszek.PoC.SignalRChat.Application.csproj" />
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.Infrastructure\Jaroszek.PoC.SignalRChat.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\Jaroszek.PoC.SignalRChat.Domain\Jaroszek.PoC.SignalRChat.Domain.csproj" />
   </ItemGroup>
 
 </Project>
