added language resource file and visibility converter

--- a/client/src/Desktop.csproj
+++ b/client/src/Desktop.csproj
@@ -238,6 +238,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Resources\Strings.pl-PL.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ShellView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -246,6 +250,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Events\ChangeStatusRequestEvent.cs" />
     <Compile Include="Events\ConnectToSignalRClientEvent.cs" />
     <Compile Include="Events\DisconnectSignalRServerRequestEvent.cs" />
